# fastapi_learning

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_db  READMDE.MD  README.MD  TODO.MD  deploy.sh  development-start.sh  docker-compose-common.yml  docker-compose-debug.yml  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  start_debug.sh  start_locally_in_debug_mode.sh  stop_debug.sh  yoyo.ini
.github/workflows/: python-app.yml
blog/: auth.py  database.py  http_status_codes.py  logger_config.py  main.py  threadpool_executor.py
blog/api/v1/: api.py  auth.py
blog/dependicies/: auth.py  database.py
blog/model/: post.py  user.py
blog/model/auth/: user_password.py  user_token.py
config/: Dockerfile  docker-compose-debug.yml  docker-compose-prod.yml  requirements.txt
db_migrations/: blog_001_create_table_blog_user.rollback.sql  blog_001_create_table_blog_user.sql  blog_002_add_initial_users.rollback.sql  blog_002_add_initial_users.sql  blog_003_users_constraint.rollback.sql  blog_003_users_constraint.sql  blog_004_create_post_table.sql  blog_005_add_initial_posts.rollback.sql  blog_005_add_initial_posts.sql  blog_006_authentification.rollback.sql  blog_006_authentification.sql
docs/: TODO.MD
env/template/: webapi.env
tests/: test_post.py  test_user.py  test_user_password.py  test_user_token.py
tests/model/: test_post.py  test_post_async.py  test_user.py  test_user_async.py
tests_api/: test_api.py
tests_api/api/: test_api.py
tests_unit/model/: test_post.py  test_user.py
tutapp/: __init__.py  db.py
(+1 files in other folders)
