[tool.poetry]
name = "fastapi_blog"
version = "0.1.0"
description = "Studying Python & FastApi"
authors = ["Renat Yuldashev <renatyv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = {extras = ["email"], version = "^1.9.0"}
pytest = "^7.1.1"
hypothesis = "^6.43.3"
pytest-asyncio = "^0.18.3"
psycopg2 = "^2.9.3"
aiosqlite = "^0.17.0"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.35"
yoyo-migrations = "^7.3.2"
loguru = "^0.6.0"
requests = "^2.27.1"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
retry = "^0.9.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "mypy"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
